--- a/charybdis-parser/Cargo.toml
+++ b/charybdis-parser/Cargo.toml
@@ -12,8 +12,8 @@ categories = ["database"]
 proc-macro2 = "1.0.81"
 syn = { version = "2.0.60", features = ["full"] }
 quote = "1.0.36"
+scylla = { git = "https://github.com/dracarys18/scylla-rust-driver.git", ref = "47c89d514722dfeae506b5fc2f67e4c4ba7f69e9", features = ["ssl"] }
 serde = { version = "1.0.200", features = ["derive"] }
-scylla = "0.14.0"
 serde_json = "1.0.116"
 colored = { version = "2.1.0", features = [] }
 walkdir = "2.5.0"
